@@ -10,7 +10,7 @@
 #
 #<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
-VERSION                         = '3.1.2'
+VERSION                         = '3.1.3'
 VERSION_BETA                    = ''
 #-----------------------------------------
 ICLOUD3                         = 'iCloud3'
